
(library
  (name linalg)
  (modules)
  (libraries 
    (re_export lacamlext)
    (re_export lacaml)
    (re_export cenv)
  )
)

(library
  (name qlib)
  (modules)
  (libraries
    (re_export qgates)
  )
)

(library
  (name mcl)
  (modules)
  (libraries 
    (re_export backend)
  )
)

(executable 
  (name main)
  (modules main)
  (libraries mcl)
)
